# AdventOfCode-python

./: .gitignore  pyproject.toml
.github/workflows/: python-checks.yml
src/: main.py
src/cafeteria/: __init__.py  main.py
src/cephalopod_homework/: __init__.py  main.py
src/ceres/: __init__.py  main.py
src/gift_shop/: __init__.py  main.py
src/historianhysteria/: main.py
src/lobby/: __init__.py  main.py
src/mulledwine/: main.py
src/printing_department/: __init__.py  main.py
src/reader/: main.py
src/rudolphreports/: main.py
src/rudolphruports/: main.py
src/secret_entrance/: __init__.py  main.py
tests/cafeteria/: test_cafeteria.py
tests/ceres/: test_main.py
tests/gift_shop/: test_main.py
tests/historianhysteria/: test_historianhysteria.py  test_main.py
tests/lobby/: test_lobby.py
tests/mulledwine/: test_main.py
tests/printing_department/: test_printing_department.py
tests/reader/: test_main.py  test_reader.py
tests/reader/mocks/: lines.txt
tests/rudolphreports/: test_main.py
tests/secret_entrance/: test_main.py  test_secretentrance.py
