[tool.poetry]
name = "adventofcode-python"
version = "0.1.0"
description = ""
authors = ["Ollie Rees <oliver.x.rees@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
paprika = "*"
numpy="*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
flake8 = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mypy]
python_version = "3.12"
plugins = "numpy.typing.mypy_plugin"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120

[tool.isort]
multi_line_output = 3  # Vertical Hanging Indent
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"