[tool.poetry]
name = "adventofcode-python"
version = "0.1.0"
description = ""
authors = ["Ollie Rees <oliver.x.rees@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
paprika = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "*"
mypy = "*"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "W", "R"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

